# freeact

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SPEC.md  approach.md  docplan-final.md  environment.yml  index.html  index.md  issues.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sandbox-config.json  sitemap.xml  system-prompt-diff.html  tasks.py
AGENTS/: index.html
CLAUDE/: index.html
architecture/: index.html
blocks/: index.html
cli/: index.html  index.md
configuration/: index.html  index.md
docker/: build.sh  dependencies-basic.txt  dependencies-eval.txt  dependencies-example.txt  dependencies-minimal.txt  push.sh
docs/: AGENTS.md  architecture.md  blocks.md  cli.md  configuration.md  environment.md  evaluation.md  execution.md  fundamentals.md  guided_tour.md  index.md  installation.md  integration.md  introduction.md  mcp-integration.md  models.md  observability.md  python-api.md  python-sdk.md  quickstart.md  sandbox.md  scratchpad.md  sdk.md  skills.md  streaming.md  system-prompt.md  terminal.md
environment/: index.html
evaluation/: README.md  __init__.py  evaluate.py  index.html  report.py  score.py
examples/: agent.py  basic_agent.py  basics.py  commands.txt  custom.py  custom_config.py  custom_template.py  execution_integrity_demo.py  experimental.py  fundamentals_1.py  fundamentals_2.py  generate_mcptools.py  mcp.json  mcp.py  observability.py  persistent_agent.py  prompt_preproc.py  quickstart.json  quickstart.py  qwen.py  sandbox-config.json  (+3 more)
(+520 files in other folders)
