[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "freeact"
version = "0.0.1"
description = "A general-purpose CodeAct Agent"
homepage = "https://github.com/gradion-ai/freeact"
readme = "README.md"
license = "Apache-2.0"
authors = [
    "Martin Krasser <martin@gradion.ai>",
    "Christoph Stumpf <chris@gradion.ai>",
]
packages = [
    { include = "freeact" },
]

[tool.poetry.dependencies]
aioconsole = "^0.8.1"
aiofiles = "^24.1"
anthropic = "^0.39.0"
google-genai = "^0.2.2"
httpx = "^0.27.2"
ipybox = "0.2.1"
openai = "^1.56.0"
pydantic = "^2.9"
python = "^3.10,<3.13"
python-dateutil = "^2.9"
python-dotenv = "^1.0"
pyyaml = "^6.0"
pyzotero = "^1.5"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0"
invoke = "^2.2"
pytest = "^8.3"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.mypy]
python_version = 3.11
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "aiofiles",
    "aiofiles.os",
    "dateutil.relativedelta",
    "dateutil.parser",
    "requests",
    "yaml"
]
ignore_missing_imports = true
